; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_file_change.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_file_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_options = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.object_id = type { i32 }

@REV_TREE_DIFFERENT = common dso_local global i32 0, align 4
@tree_difference = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.diff_options*, i32, i32, %struct.object_id*, %struct.object_id*, i32, i32, i8*, i32, i32)* @file_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @file_change(%struct.diff_options* %0, i32 %1, i32 %2, %struct.object_id* %3, %struct.object_id* %4, i32 %5, i32 %6, i8* %7, i32 %8, i32 %9) #0 {
  %11 = alloca %struct.diff_options*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.object_id*, align 8
  %15 = alloca %struct.object_id*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.diff_options* %0, %struct.diff_options** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store %struct.object_id* %3, %struct.object_id** %14, align 8
  store %struct.object_id* %4, %struct.object_id** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i8* %7, i8** %18, align 8
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  %21 = load i32, i32* @REV_TREE_DIFFERENT, align 4
  store i32 %21, i32* @tree_difference, align 4
  %22 = load %struct.diff_options*, %struct.diff_options** %11, align 8
  %23 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
